STP 선정 과정 추가

--- a/ComputerScience/Network/04_스위치(2계층 장비).md
+++ b/ComputerScience/Network/04_스위치(2계층 장비).md
@@ -144,7 +144,7 @@ SPoF란 하나의 시스템이나 구성 요소에서 고장이 발생했을 때
 
 스패닝 트리 프로토콜을 이용하려면 전체 스위치가 어떻게 연결되는지 알아야하므로, 전체적인 연결 상황을 파악하기 위해 **BPDU(Bridge Protocol Data Unit)라는 프로토콜**을 통해 스위치 간에 정보를 전달한다.
 
-**STP 동작 과정**
+**STP 선정 과정**
 
 스위치는 BPDU에 담긴 여러 정보 중 `Root Bridge ID`, `Path Cost`, `Port ID` 등을 이용해 루트 스위치(root bridge)와 루트 포트(root port), 지정 포트(designated port), 대체 포트(alternated port)를 정한다.
 
@@ -152,13 +152,16 @@ SPoF란 하나의 시스템이나 구성 요소에서 고장이 발생했을 때
 
 <img src="imgs/2022-12-04-16-01-58-image.png" title="" alt="" width="443">
 
-스위치의 서열이 정해지면, 각 스위치들의 포트의 서열이 매겨진다(다른 스위치와 경합하는 것이 아닌, 스위치 내에서만 적용) . 이때는 `path cost`를 이용해 경합하는데, 스위치 자신의 `path cost`와 루트 스위치까지의 경로에 위치한 스위치의 `path cost`를 모두 고려한다.
+스위치의 서열이 정해지면, 각 스위치들의 포트의 서열이 매겨진다(다른 스위치와 경합하는 것이 아닌, 스위치 내에서만 적용). 이때는 다음 조건에 따라 루트 포트를 결정한다.
+  1. `path cost`가 가장 낮은 포트
+  2. 연결된 상대방의 `bridge ID`가 가장 낮은 포트
+  3. 연결된 상대방의 `port ID`가 가장 낮은 포트
 
 <img src="imgs/2022-12-04-16-11-43-image.png" title="" alt="" width="501">
 
-먼저, 루트 포트는 `path cost`가 가장 작은 포트가 될 것이다. 그 다음 지정 포트를 결정해야 하는데, 두 스위치 간의 연결에는 반드시 하나의 지정 포트가 있어야 한다. 따라서 루트 포트에 연결된 반대편 스위치의 포트가 지정 포트가 된다. 이제 데이터 통신을 하지 않는 포트인 대체 포트를 결정해야한다. 루트 포트도 지정 포트도 아닌 남은 포트 중 스위치의 bridge ID의 우선순위가 낮은 쪽을 지정포트로 하고, 반대편에 연결된 포트를 대체 포트로 한다.
+위 그림에서 루트 포트는 `path cost`만을 이용해 결정할 수 있다. 그 다음 지정 포트를 결정해야 하는데, 두 스위치 간의 연결(세그먼트)에는 반드시 하나의 지정 포트가 있어야 한다. 따라서 루트 포트에 연결된 반대편 스위치의 포트가 지정 포트가 된다. 이제 데이터 통신을 하지 않는 포트인 대체 포트를 결정해야한다. 루트 포트도 지정 포트도 아닌 남은 포트 중 스위치의 자체의 `path cost`가 낮은 스위치 쪽 포트를 지정포트로 하고, 반대편에 연결된 포트를 대체 포트로 한다.
 
-![](imgs/2022-12-04-16-11-53-image.png)
+<img src="imgs/2022-12-04-16-11-53-image.png" title="" alt="" width="600">
 
 **스위치 포트의 상태 및 변경 과정**
 
