--- a/ComputerScience/OperatingSystem/프로세스 동기화.md
+++ b/ComputerScience/OperatingSystem/프로세스 동기화.md
@@ -4,4 +4,40 @@
 
 ### 동기화
 
-- 
+프로세스 동기화란 **프로세스들 사이의 수행 시기를 맞추는 것**을 의미한다. 수행 시기를 맞춘다는 것은 다음과 같다.
+
+- **실행 순서 제어**
+  
+  프로세스를 올바른 순서대로 실행하는 것
+  
+  ex) txt 파일에 `Reader` 프로세스와 `Writer` 프로세스가 동시에 실행되려 한다면, `Writer` 프로세스가 값을 저장한 뒤에 `Reader` 프로세스가 실행되어야 한다.
+
+- **상호 배제**
+  
+  동시에 접근해서는 안 되는 자원에 하나의 프로세스만 접근하게 하기
+  
+  
+
+> 실행의 흐름을 갖는 모든 것은 동기화의 대상이다. 즉, 프로세스뿐만 아니라 스레드도 동기화 대상이 된다.
+
+
+
+
+
+### 생산자와 소비자 문제
+
+**상호 배제**에 관련된 유명한 문제로 "생산자와 소비자 문제"가 있다.
+
+```
+생산자 () {
+    버퍼에 데이터 삽입
+    '총합' 변수 1 증가
+}
+```
+
+```
+소비자 () {
+    버퍼에서 데이터 빼내기
+    '총합' 변수 1 감소
+}
+```
